--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Bienvenido a  <%= title %></p>
+    <p>El portal donde podra crear sus propios juegos!</p>
+    <p><a href="/quizes/question">Comienze a jugar</a></p>
   </body>
 </html>
