--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,29 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+	margin: 0px;
+	padding: 0px;
 }
-
-a {
-  color: #00B7FF;
+body {	font: 16px Georgia, serif; }
+#page-wrap {
+	margin: 2% auto;
+	color: white;
+	max-width: 600px;
+}
+#page-wrap > .main {
+	border: 1px solid #999;
+	padding: 1%;
+	margin-bottom: 1px;
+	color: black;
+}
+header,
+nav,
+section,
+footer {
+	background: #eee;
+	text-align: center;
+}
+section > div {
+	padding: 20px;
+}
+nav span {
+	margin: 0px 10px 0px 0px;
 }
