--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
     <title><%= title %></title>    
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Bienvenido a  <%= title %></p>
+    
+    <h3>Bienvenido a  <%= title %></h3>
     <p>El portal donde podra crear sus propios juegos!</p>
-    <p><a href="/quizes/question">Comienze a jugar</a></p>
+    
   </body>
 </html>
