--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,13 +15,15 @@
       </header>
       <nav class="main" id="n1" role="navitation">
         <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes/question">Preguntas</a></span>       
+        <span><a href="/quizes/question">Preguntas</a></span>   
+        <span><a href="/author">Autor</a></span>    
       </nav>
       <section class="main" id="s1">
         <%- body %>
       </section>
       <footer class="main" id="f1">
-        <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">¿Qúe es un Quiz?</a> 
+        <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">¿Qúe es un Quiz?</a> | 
+        <a href="https://github.com/abarqueror/Quiz-I.git" target="_blank">Proyecto en GitHub</a>
       </footer>
     </div>
   </body>
