--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,4 +1,6 @@
-<html>
+
+<!-- html para las respuesta hasta la primera version de despliegue en heroku con BBDD -->
+<!-- <html>
   <head>
   <meta charset="utf-8">
    <title>Quiz</title>
@@ -10,4 +12,9 @@
     <a href="/quizes/question">Inténtelo otra vez</a>
     
   </body>
-</html>
+</html> -->
+
+<p>
+	<%= respuesta %>
+	<a href="/quizes/<%= quiz.id %>"> Regresar </a>
+</p>
