--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,17 +19,10 @@
         <span><a href="/author">Autor</a></span>    
       </nav>
        <section class="main" id="s1">
-              <div><%- body %></div> 
-       <!-- <div>
-        <table>
-             
-             <tr><td><a href="quizes/1">Capital de Italia</a></td></tr>
-             <tr><td><a href="quizes/2">Capital de Portugal</a></td></tr>
-             
-        </table>
-       </div> -->
+        
 
-      </section> 
+        <%- body %>
+      </section>
 
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">¿Qúe es un Quiz?</a> | 
