--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -11,8 +11,18 @@
     </p>
 
 </form>
-<table>
-	<% var i; for(i=0; i<quizes.length; i++) { %>
-	<tr><td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
-	<% } %>
-</table>
+<table  width="100%">
+	<% var i; for ( i=0; i<quizes.length; i++) { %>
+    <tr><td width="30%"></td>
+        <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+        <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+        <td>
+            <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+                <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
+            </form>
+        </td>
+        <td width="30%"></td>
+    </tr>
+<% } %>
+</table><p>
+<p><a href="quizes/new"><button type="button">Crear pregunta</button></a></p>
